--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "^18",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
